--- a/COMP2007-AS2/Views/Shared/_Layout.cshtml
+++ b/COMP2007-AS2/Views/Shared/_Layout.cshtml
@@ -26,8 +26,7 @@
                     <li>@Html.ActionLink("Staff", "Index", "Staff")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Login", "Login", "Account")</li>
-                    <li>@Html.ActionLink("Register", "Register", "Account")</li>
+                    @Html.Partial("_LoginPartial")
                 </ul>
             </div>
         </div>
